// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API tests should get all rewards 1`] = `
[
  {
    "__v": 0,
    "_id": "65f6cf35a0a6a67d2493d729",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T11:08:37.569Z",
    "updatedAt": "2024-03-17T11:08:37.569Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "65f6cfa8a0a6a67d2493d732",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T11:10:32.882Z",
    "updatedAt": "2024-03-17T11:10:32.882Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "65f6daa36e91fabf05e667e8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T11:57:23.935Z",
    "updatedAt": "2024-03-17T11:57:23.935Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "65f6dab66e91fabf05e667f6",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T11:57:42.926Z",
    "updatedAt": "2024-03-17T11:57:42.926Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "65f6de6306b64d7797d744c8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T12:13:23.227Z",
    "updatedAt": "2024-03-17T12:13:23.227Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f75295bf81c9eb17a86276",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T20:29:09.933Z",
    "updatedAt": "2024-03-17T20:29:09.933Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f7545cbf81c9eb17a86294",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T20:36:44.516Z",
    "updatedAt": "2024-03-17T20:36:44.516Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f7548cbf81c9eb17a862a1",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T20:37:32.267Z",
    "updatedAt": "2024-03-17T20:37:32.267Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f75ab8c837e167900d31ef",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T21:03:52.995Z",
    "updatedAt": "2024-03-17T21:03:52.995Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6609c34ae8c12f6acc0b0a4c",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-03-31T20:10:50.754Z",
    "updatedAt": "2024-03-31T20:10:50.754Z",
    "userId": "6609c2bee8c12f6acc0b0a08",
  },
  {
    "__v": 0,
    "_id": "66128a8a68814c04477ca282",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-07T11:59:06.605Z",
    "updatedAt": "2024-04-07T11:59:06.605Z",
    "userId": "6609c2bee8c12f6acc0b0a08",
  },
  {
    "__v": 0,
    "_id": "66128afd68814c04477ca292",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-07T12:01:01.406Z",
    "updatedAt": "2024-04-07T12:01:01.406Z",
    "userId": "6609c2bee8c12f6acc0b0a08",
  },
  {
    "__v": 0,
    "_id": "661307b2235f210d27dc072b",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-07T20:53:06.140Z",
    "updatedAt": "2024-04-07T20:53:06.140Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66130e09d236cd7786fd94d7",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-07T21:20:09.527Z",
    "updatedAt": "2024-04-07T21:20:09.527Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662caea0e4e3ee6c22e99522",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-27T07:52:00.516Z",
    "updatedAt": "2024-04-27T07:52:00.516Z",
    "userId": "662cad97e4e3ee6c22e99507",
  },
  {
    "__v": 0,
    "_id": "662caf08e4e3ee6c22e99548",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-27T07:53:44.131Z",
    "updatedAt": "2024-04-27T07:53:44.131Z",
    "userId": "662cad97e4e3ee6c22e99507",
  },
  {
    "__v": 0,
    "_id": "662f80e6bb7fe0ab56da04e0",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:13:42.109Z",
    "updatedAt": "2024-04-29T11:13:42.109Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "662f80e8bb7fe0ab56da04e6",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:13:44.770Z",
    "updatedAt": "2024-04-29T11:13:44.770Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "662f8122bb7fe0ab56da04f4",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:14:42.973Z",
    "updatedAt": "2024-04-29T11:14:42.973Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662f8180bb7fe0ab56da04ff",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:16:16.209Z",
    "updatedAt": "2024-04-29T11:16:16.209Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662f8203bb7fe0ab56da050b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:18:27.209Z",
    "updatedAt": "2024-04-29T11:18:27.209Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662f826cbb7fe0ab56da051f",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:20:12.657Z",
    "updatedAt": "2024-04-29T11:20:12.657Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "662f826dbb7fe0ab56da0525",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:20:13.765Z",
    "updatedAt": "2024-04-29T11:20:13.765Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "662fbc8ff9e8c5468deeca7d",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T15:28:15.619Z",
    "updatedAt": "2024-04-29T15:28:15.619Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "664450f4501eb2dc65217433",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-15T06:06:44.432Z",
    "updatedAt": "2024-05-15T06:06:44.432Z",
    "userId": "662cad97e4e3ee6c22e99507",
  },
  {
    "__v": 0,
    "_id": "6652fb3ebe8826f705f240e7",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T09:05:02.797Z",
    "updatedAt": "2024-05-26T09:05:02.797Z",
    "userId": "66522b44c655d7e2fba0c7be",
  },
  {
    "__v": 0,
    "_id": "665322deb5e3e687884722c1",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T11:54:06.730Z",
    "updatedAt": "2024-05-26T11:54:06.730Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6653237945df2da31e41fbb8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T11:56:41.997Z",
    "updatedAt": "2024-05-26T11:56:41.997Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6653245645df2da31e41fbd4",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:00:22.548Z",
    "updatedAt": "2024-05-26T12:00:22.548Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665325b3b5e3e687884722e8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:06:11.227Z",
    "updatedAt": "2024-05-26T12:06:11.227Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66532640b5e3e6878847230a",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:08:32.288Z",
    "updatedAt": "2024-05-26T12:08:32.288Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665326e245df2da31e41fc10",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:11:14.023Z",
    "updatedAt": "2024-05-26T12:11:14.023Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6653273db5e3e6878847233c",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:12:45.658Z",
    "updatedAt": "2024-05-26T12:12:45.658Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665327bdb5e3e68788472369",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:14:53.965Z",
    "updatedAt": "2024-05-26T12:14:53.965Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66532802b5e3e68788472398",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:16:02.416Z",
    "updatedAt": "2024-05-26T12:16:02.416Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665328fd45df2da31e41fc3f",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:20:13.447Z",
    "updatedAt": "2024-05-26T12:20:13.447Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665329ed45df2da31e41fc68",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:24:13.755Z",
    "updatedAt": "2024-05-26T12:24:13.755Z",
    "userId": "66522b44c655d7e2fba0c7be",
  },
  {
    "__v": 0,
    "_id": "66532b5ab5e3e687884723c5",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:30:18.104Z",
    "updatedAt": "2024-05-26T12:30:18.104Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66532dd93f22d7aacc0f34d7",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:40:57.473Z",
    "updatedAt": "2024-05-26T12:40:57.473Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66559e96d0875be818ecf6b0",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:06:30.722Z",
    "updatedAt": "2024-05-28T09:06:30.722Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "66559fb1d0875be818ecf704",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:11:13.827Z",
    "updatedAt": "2024-05-28T09:11:13.827Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "6655a13cd0875be818ecf742",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:17:48.648Z",
    "updatedAt": "2024-05-28T09:17:48.648Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "6655a188d0875be818ecf783",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:19:04.412Z",
    "updatedAt": "2024-05-28T09:19:04.412Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "6655a231d0875be818ecf7c6",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:21:53.285Z",
    "updatedAt": "2024-05-28T09:21:53.285Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "6655a33ad0875be818ecf80d",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:26:18.207Z",
    "updatedAt": "2024-05-28T09:26:18.207Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "6655a387d0875be818ecf83b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:27:35.554Z",
    "updatedAt": "2024-05-28T09:27:35.554Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "6655a400d0875be818ecf86b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:29:36.491Z",
    "updatedAt": "2024-05-28T09:29:36.491Z",
    "userId": "662e9fc03b7759f909c576e9",
  },
  {
    "__v": 0,
    "_id": "6655a41bd0875be818ecf88c",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:30:03.939Z",
    "updatedAt": "2024-05-28T09:30:03.939Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6655a430d0875be818ecf89e",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:30:24.383Z",
    "updatedAt": "2024-05-28T09:30:24.383Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "6655a49bd0875be818ecf8d1",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:32:11.763Z",
    "updatedAt": "2024-05-28T09:32:11.763Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "6655a4cfd2f8480bc8145e9b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:33:03.302Z",
    "updatedAt": "2024-05-28T09:33:03.302Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "6655a4cfd2f8480bc8145ea6",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:33:03.629Z",
    "updatedAt": "2024-05-28T09:33:03.629Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "6655a50dd2f8480bc8145ed6",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:34:05.551Z",
    "updatedAt": "2024-05-28T09:34:05.551Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "6655a543d2f8480bc8145f0a",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:34:59.521Z",
    "updatedAt": "2024-05-28T09:34:59.521Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "6655a557d2f8480bc8145f32",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:35:19.180Z",
    "updatedAt": "2024-05-28T09:35:19.180Z",
    "userId": "65f6cf27a0a6a67d2493d725",
  },
  {
    "__v": 0,
    "_id": "6655a9f94ace1fa3db63c652",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:55:05.302Z",
    "updatedAt": "2024-05-28T09:55:05.302Z",
    "userId": "66522b44c655d7e2fba0c7be",
  },
  {
    "__v": 0,
    "_id": "6655aa104ace1fa3db63c68b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:55:28.943Z",
    "updatedAt": "2024-05-28T09:55:28.943Z",
    "userId": "66522b44c655d7e2fba0c7be",
  },
  {
    "__v": 0,
    "_id": "6655ab23e25bcfa530d9c27a",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T10:00:03.320Z",
    "updatedAt": "2024-05-28T10:00:03.320Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665923dd60f0ce5aa4e62311",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-31T01:11:57.884Z",
    "updatedAt": "2024-05-31T01:11:57.884Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66642ac1c008cbfeaf8ab15b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-08T09:56:17.735Z",
    "updatedAt": "2024-06-08T09:56:17.735Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666944a2d8761d7fde2a5e5c",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-12T06:48:02.236Z",
    "updatedAt": "2024-06-12T06:48:02.236Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666c0eedb33b5ed0562dfc6a",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-14T09:35:41.515Z",
    "updatedAt": "2024-06-14T09:35:41.515Z",
    "userId": "665c17939334fdc7f483e62f",
  },
  {
    "__v": 0,
    "_id": "666d82a9b49a392075559f5e",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T12:01:45.841Z",
    "updatedAt": "2024-06-15T12:01:45.841Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666d8b56d337baa088f190a1",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T12:38:46.612Z",
    "updatedAt": "2024-06-15T12:38:46.612Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbce635497066efb2c583",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:10:14.307Z",
    "updatedAt": "2024-06-15T16:10:14.307Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbcfb35497066efb2c596",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:10:35.286Z",
    "updatedAt": "2024-06-15T16:10:35.286Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbd0c35497066efb2c5a3",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:10:52.538Z",
    "updatedAt": "2024-06-15T16:10:52.538Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbe7797c961bf33c99eb9",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:16:55.076Z",
    "updatedAt": "2024-06-15T16:16:55.076Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbe7f97c961bf33c99ec8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:17:03.428Z",
    "updatedAt": "2024-06-15T16:17:03.428Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dc5343ab77f2fc2d2732d",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:45:40.128Z",
    "updatedAt": "2024-06-15T16:45:40.128Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dc5383ab77f2fc2d2733a",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:45:44.818Z",
    "updatedAt": "2024-06-15T16:45:44.818Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dc53e3ab77f2fc2d27349",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:45:50.372Z",
    "updatedAt": "2024-06-15T16:45:50.372Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666ddd4c5c0ca4ea4bf3ad6b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T18:28:28.322Z",
    "updatedAt": "2024-06-15T18:28:28.322Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666ed722e85f4e316ed28f2d",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-16T12:14:26.543Z",
    "updatedAt": "2024-06-16T12:14:26.543Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666ed7e0e85f4e316ed28fce",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-16T12:17:36.078Z",
    "updatedAt": "2024-06-16T12:17:36.078Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666f028faf1b2f0381a166a9",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-16T15:19:43.912Z",
    "updatedAt": "2024-06-16T15:19:43.912Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "667f80b23ed75a6d4f46f80a",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-29T03:34:10.725Z",
    "updatedAt": "2024-06-29T03:34:10.725Z",
    "userId": "667eda4a47ec55327955977b",
  },
  {
    "__v": 0,
    "_id": "667f85ffcf3a7e8c10c34708",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-29T03:56:47.493Z",
    "updatedAt": "2024-06-29T03:56:47.493Z",
    "userId": "667f85fecf3a7e8c10c34703",
  },
  {
    "__v": 0,
    "_id": "667f8600ac256ecf0b50c06f",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-29T03:56:48.870Z",
    "updatedAt": "2024-06-29T03:56:48.870Z",
    "userId": "667f85fecf3a7e8c10c34703",
  },
]
`;

exports[`API tests should get all vouchers for users 1`] = `
{
  "message": "Not Found: /api/vouchers/allVouchersForUsers?userId=65f6cf15a0a6a67d2493d722",
  "stack": "Error: Not Found: /api/vouchers/allVouchersForUsers?userId=65f6cf15a0a6a67d2493d722
    at notFound (file:///var/task/backend/middleware/error.js:6:17)
    at Layer.handle [as handle_request] (/var/task/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/var/task/node_modules/express/lib/router/index.js:328:13)
    at /var/task/node_modules/express/lib/router/index.js:286:9
    at Function.process_params (/var/task/node_modules/express/lib/router/index.js:346:12)
    at next (/var/task/node_modules/express/lib/router/index.js:280:10)
    at cors (/var/task/node_modules/cors/lib/index.js:188:7)
    at /var/task/node_modules/cors/lib/index.js:224:17
    at originCallback (/var/task/node_modules/cors/lib/index.js:214:15)
    at /var/task/node_modules/cors/lib/index.js:219:13",
}
`;

exports[`API tests should get all vouchers of a user 1`] = `
{
  "message": "Not Found: /api/vouchers/allVouchersOfUser?userId=65f6cf15a0a6a67d2493d722",
  "stack": "Error: Not Found: /api/vouchers/allVouchersOfUser?userId=65f6cf15a0a6a67d2493d722
    at notFound (file:///var/task/backend/middleware/error.js:6:17)
    at Layer.handle [as handle_request] (/var/task/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/var/task/node_modules/express/lib/router/index.js:328:13)
    at /var/task/node_modules/express/lib/router/index.js:286:9
    at Function.process_params (/var/task/node_modules/express/lib/router/index.js:346:12)
    at next (/var/task/node_modules/express/lib/router/index.js:280:10)
    at cors (/var/task/node_modules/cors/lib/index.js:188:7)
    at /var/task/node_modules/cors/lib/index.js:224:17
    at originCallback (/var/task/node_modules/cors/lib/index.js:214:15)
    at /var/task/node_modules/cors/lib/index.js:219:13",
}
`;

exports[`API tests should get user reward history 1`] = `
[
  {
    "__v": 0,
    "_id": "65f6de6306b64d7797d744c8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T12:13:23.227Z",
    "updatedAt": "2024-03-17T12:13:23.227Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f75295bf81c9eb17a86276",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T20:29:09.933Z",
    "updatedAt": "2024-03-17T20:29:09.933Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f7545cbf81c9eb17a86294",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T20:36:44.516Z",
    "updatedAt": "2024-03-17T20:36:44.516Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f7548cbf81c9eb17a862a1",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T20:37:32.267Z",
    "updatedAt": "2024-03-17T20:37:32.267Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "65f75ab8c837e167900d31ef",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-03-17T21:03:52.995Z",
    "updatedAt": "2024-03-17T21:03:52.995Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "661307b2235f210d27dc072b",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-07T20:53:06.140Z",
    "updatedAt": "2024-04-07T20:53:06.140Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66130e09d236cd7786fd94d7",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-07T21:20:09.527Z",
    "updatedAt": "2024-04-07T21:20:09.527Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662f8122bb7fe0ab56da04f4",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:14:42.973Z",
    "updatedAt": "2024-04-29T11:14:42.973Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662f8180bb7fe0ab56da04ff",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:16:16.209Z",
    "updatedAt": "2024-04-29T11:16:16.209Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662f8203bb7fe0ab56da050b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T11:18:27.209Z",
    "updatedAt": "2024-04-29T11:18:27.209Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "662fbc8ff9e8c5468deeca7d",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-04-29T15:28:15.619Z",
    "updatedAt": "2024-04-29T15:28:15.619Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665322deb5e3e687884722c1",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T11:54:06.730Z",
    "updatedAt": "2024-05-26T11:54:06.730Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6653237945df2da31e41fbb8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T11:56:41.997Z",
    "updatedAt": "2024-05-26T11:56:41.997Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6653245645df2da31e41fbd4",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:00:22.548Z",
    "updatedAt": "2024-05-26T12:00:22.548Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665325b3b5e3e687884722e8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:06:11.227Z",
    "updatedAt": "2024-05-26T12:06:11.227Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66532640b5e3e6878847230a",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:08:32.288Z",
    "updatedAt": "2024-05-26T12:08:32.288Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665326e245df2da31e41fc10",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:11:14.023Z",
    "updatedAt": "2024-05-26T12:11:14.023Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6653273db5e3e6878847233c",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:12:45.658Z",
    "updatedAt": "2024-05-26T12:12:45.658Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665327bdb5e3e68788472369",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:14:53.965Z",
    "updatedAt": "2024-05-26T12:14:53.965Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66532802b5e3e68788472398",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:16:02.416Z",
    "updatedAt": "2024-05-26T12:16:02.416Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665328fd45df2da31e41fc3f",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:20:13.447Z",
    "updatedAt": "2024-05-26T12:20:13.447Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66532b5ab5e3e687884723c5",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:30:18.104Z",
    "updatedAt": "2024-05-26T12:30:18.104Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66532dd93f22d7aacc0f34d7",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-26T12:40:57.473Z",
    "updatedAt": "2024-05-26T12:40:57.473Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6655a41bd0875be818ecf88c",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T09:30:03.939Z",
    "updatedAt": "2024-05-28T09:30:03.939Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "6655ab23e25bcfa530d9c27a",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-05-28T10:00:03.320Z",
    "updatedAt": "2024-05-28T10:00:03.320Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "665923dd60f0ce5aa4e62311",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-05-31T01:11:57.884Z",
    "updatedAt": "2024-05-31T01:11:57.884Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "66642ac1c008cbfeaf8ab15b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-08T09:56:17.735Z",
    "updatedAt": "2024-06-08T09:56:17.735Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666944a2d8761d7fde2a5e5c",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-12T06:48:02.236Z",
    "updatedAt": "2024-06-12T06:48:02.236Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666d82a9b49a392075559f5e",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T12:01:45.841Z",
    "updatedAt": "2024-06-15T12:01:45.841Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666d8b56d337baa088f190a1",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T12:38:46.612Z",
    "updatedAt": "2024-06-15T12:38:46.612Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbce635497066efb2c583",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:10:14.307Z",
    "updatedAt": "2024-06-15T16:10:14.307Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbcfb35497066efb2c596",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:10:35.286Z",
    "updatedAt": "2024-06-15T16:10:35.286Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbd0c35497066efb2c5a3",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:10:52.538Z",
    "updatedAt": "2024-06-15T16:10:52.538Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbe7797c961bf33c99eb9",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:16:55.076Z",
    "updatedAt": "2024-06-15T16:16:55.076Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dbe7f97c961bf33c99ec8",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:17:03.428Z",
    "updatedAt": "2024-06-15T16:17:03.428Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dc5343ab77f2fc2d2732d",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:45:40.128Z",
    "updatedAt": "2024-06-15T16:45:40.128Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dc5383ab77f2fc2d2733a",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:45:44.818Z",
    "updatedAt": "2024-06-15T16:45:44.818Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666dc53e3ab77f2fc2d27349",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T16:45:50.372Z",
    "updatedAt": "2024-06-15T16:45:50.372Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666ddd4c5c0ca4ea4bf3ad6b",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-15T18:28:28.322Z",
    "updatedAt": "2024-06-15T18:28:28.322Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666ed722e85f4e316ed28f2d",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-16T12:14:26.543Z",
    "updatedAt": "2024-06-16T12:14:26.543Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666ed7e0e85f4e316ed28fce",
    "action": "post",
    "coinsEarned": 1,
    "createdAt": "2024-06-16T12:17:36.078Z",
    "updatedAt": "2024-06-16T12:17:36.078Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
  {
    "__v": 0,
    "_id": "666f028faf1b2f0381a166a9",
    "action": "comment",
    "coinsEarned": 1,
    "createdAt": "2024-06-16T15:19:43.912Z",
    "updatedAt": "2024-06-16T15:19:43.912Z",
    "userId": "65f6cf15a0a6a67d2493d722",
  },
]
`;
